--- a/src/main/java/Config/porp.properties
+++ b/src/main/java/Config/porp.properties
@@ -4,4 +4,4 @@ geckoWebdriver=webdriver.gecko.driver
 geckoWebdriverPath=D:\\QA automation\\eclipse\\Seleniumjar\\geckodriver.exe
 chromeWebdriver=webdriver.chrome.driver
 chromeWebdriverPath=D:\\QA automation\\eclipse\\Seleniumjar\\chromedriver.exe
-email=Rrana5698@conestogac.on.ca
+email=rrana5698@conestogac.on.ca
